# rtype

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .releaserc.json  CMakeLists.txt  CONTRIBUTING.md  README.md  caca  client.cpp  docker-compose.yaml  install-asio.sh  issues  maintests.cpp  udp_client.cpp  udp_server_asio  udp_server_asio.cpp  udp_server_linux  udp_server_linux.cpp  vcpkg.json
client/: CMakeLists.txt
client/assets/json/: background_space.json  boss.json  enemy.json  enemy2.json  enemy3.json  explose.json  missile.json  player.json  player2.json  player3.json  player4.json
client/assets/levels/space/: easy.json  hard.json  medium.json
client/assets/shaders/: colorblind.frag
client/engine/resources/: AnimationLibrary.hpp
client/engine/system/render/: RenderSystem.cpp
client/src/: Main.cpp  main.cpp
client/src/ecs/: Entity.hpp
client/src/ecs/components/: Animation.hpp  AnimationState.hpp  AudioSource.hpp  Camera.hpp  Drawable.hpp  InputComponent.hpp  NetworkIdentity.hpp  NetworkInterpolation.hpp  NetworkSync.hpp  Position.hpp  Render.hpp  RenderLink.hpp  Renderable.hpp  ScrollingBackground.hpp  ShootingComponent.hpp  SparseArray.hpp  SparseArray.tpp  Sprite.hpp  SpriteTag.hpp  VisualEffect.hpp
client/src/ecs/core/: Entity.hpp
client/src/ecs/registry/: Registry.cpp  Registry.hpp  Registry.tpp
client/src/ecs/systems/: ISystem.hpp  InputSystem.cpp  InputSystem.hpp  NetworkReceiveSystem.cpp  NetworkReceiveSystem.hpp  NetworkSendSystem.cpp  NetworkSendSystem.hpp
client/src/engine/core/: EntityClient.hpp  Position.hpp  SpriteDefinition.hpp
client/src/engine/render/: RenderCommand.hpp  RenderComponent.hpp
client/src/engine/state/: IGameState.hpp
client/src/events/: Event.hpp  EventInit.cpp  EventInit.hpp  InputEvents.cpp  InputEvents.hpp
client/src/events/Bus/: EventBus.hpp  EventBus.tpp
client/src/events/Input/: InputState.cpp  InputState.hpp
client/src/events/Key/: Key.hpp
client/src/events/Registry/: EventRegistry.cpp  EventRegistry.hpp
client/src/exception/: NetworkException.cpp  NetworkException.hpp
client/src/exceptions/: GameExceptions.hpp
client/src/game/: Button.cpp  Button.hpp  ClientWorld.cpp  ClientWorld.hpp  DisplayInit.cpp  DisplayInit.hpp  EntitiesFactory.cpp  EntitiesFactory.hpp  GameClient.cpp  GameClient.hpp  GameOverScene.cpp  GameOverScene.hpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  SettingScene.cpp  SettingScene.hpp  Starfield.cpp  Starfield.hpp
client/src/game/Button/: Button.cpp  Button.hpp
client/src/game/CommandBuffer/: WorldCommandBuffer.cpp  WorldCommandBuffer.hpp
client/src/game/DisplayInit/: DisplayInit.cpp  DisplayInit.hpp
client/src/game/GameScene/: GameScene.cpp  GameScene.hpp
client/src/game/GameWorld/: GameWorld.cpp  GameWorld.hpp
client/src/game/MenuScene/: MenuScene.cpp  MenuScene.hpp
client/src/game/SettingScene/: SettingScene.cpp  SettingScene.hpp
client/src/game/StartField/: Starfield.cpp  Starfield.hpp
client/src/game/World/: ClientWorld.hpp
client/src/game/command/: WorldCommand.hpp
client/src/game/commandBuffer/: RenderCommandBuffer.hpp  WorldCommandBuffer.cpp  WorldCommandBuffer.hpp
client/src/game/controller/: ClientController.cpp  ClientController.hpp  IClientMessageSink.hpp
client/src/game/interface/: IEntitiesFactory.hpp
client/src/game/rooms/: RoomTypes.hpp
client/src/game/world/: ClientWorld.cpp  ClientWorld.hpp
client/src/graphics/: ColorBlindType.hpp  GameHUD.cpp  GameHUD.hpp  GraphicsTypes.hpp  IEvent.hpp  InputState.hpp
client/src/graphics/SFML/: SFMLAnimation.cpp  SFMLAnimation.hpp  SFMLAnimationManager.cpp  SFMLAnimationManager.hpp  SFMLAudio.cpp  SFMLAudio.hpp  SFMLText.cpp  (+13 more)
client/src/inputs/: GameEventHandler.cpp  GameEventHandler.hpp  SFMLInputHandler.cpp  SFMLInputHandler.hpp
client/src/networks/: NetClient.cpp  NetClient.hpp
client/src/resources/: EmbeddedResourceManager.cpp  EmbeddedResourceManager.hpp  IResourceManager.hpp  ResourceError.hpp
client/src/thread/: ClientRuntime.cpp  ClientRuntime.hpp
client/tests/: CMakeLists.txt  README.md  testPacketSerializer.cpp  testUDPClient.cpp
client/tests/network/: MockNetWrapper.hpp  TestableNetClient.hpp  testNetClientPingPongImpl.cpp
server/: CMakeLists.txt
server/src/: Main.cpp
server/src/buffer/: packetReceived.hpp
server/src/network/: Endian.hpp
server/src/packet/: ConnectPacket.hpp  DamagePacket.hpp  EntityCreatePacket.hpp  HeaderPacket.hpp
server/src/room/: Room.hpp
server/src/thread/: ServerRuntime.cpp  ServerRuntime.hpp
server/src/utils/: Rand.cpp  Rand.hpp
server/tests/: CMakeLists.txt  testRegistry.cpp  testSnapshotSystem.cpp
server/tests/ecs/: testSnapshotSystem.cpp
server/tests/game/: MockServer.hpp  MockSessionManager.hpp  testGameServer.cpp  testMovementSystem.cpp  testWorld.cpp
server/tests/levels/: level1.json  level2.json
server/tests/server/: mockNetWrapper.hpp  testUDPServer.cpp
shared/Buffer/: CMakeLists.txt
shared/CommandBuffer/: CMakeLists.txt
shared/CommandBuffer/src/: CommandBuffer.hpp  CommandBuffer.tpp
shared/DLLoader/: CMakeLists.txt
shared/DLLoader/src/: DLLoader.cpp  DLLoader.hpp  DLLoader.tpp
shared/NetPacket/: CMakeLists.txt
shared/NetWrapper/Plugin/: CMakeLists.txt
shared/NetWrapper/Wrapper/: CMakeLists.txt  NetWrapper.cpp  NetWrapper.hpp
shared/Network/: CMakeLists.txt
shared/Network/Data/: DamageData.hpp  DefaultData.hpp  EntityCreateData.hpp  EntityDestroyData.hpp  HeaderData.hpp  InputData.hpp  InputPacket.hpp  SnapEntityData.hpp  TypesData.hpp
shared/Network/Protocol/: PacketTypes.hpp
shared/Network/Utils/: Endian.hpp
shared/Signal/: CMakeLists.txt
shared/Signal/PosixHandler/: PosixHandler.cpp
shared/Signal/SignalHandler/: SignalHandler.hpp
shared/ecs/: CMakeLists.txt
shared/ecs/src/: Registry.hpp
shared/tests/: CMakeLists.txt  testBuffer.cpp  testCommandBuffer.cpp  testDLLoader.cpp  testEndian.cpp  testEntity.cpp  testPacket.cpp  testPluginLib.cpp  testRegistry.cpp  testSnapshotSystem.cpp  testSparseArray.cpp  testWrapper.cpp
shared/tests/libs/: testlib.cpp
(+434 files in other folders)
